--- a/src/sass/_standard-page-layout.scss
+++ b/src/sass/_standard-page-layout.scss
@@ -60,6 +60,15 @@ $_drawer-inline-padding: 16px;
 }
 
 .page-content {
+  display: block;
+  margin-left: 300px;
+
+  @supports (display: flex) {
+    display: flex;
+    justify-content: center;
+    margin-left: unset;
+  }
+
   @include breakpoints.from-narrow() {
     grid-column: 2;
   }
