--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,11 +53,6 @@ body {
   min-height: 100vh;
 }
 
-main {
-  display: flex;
-  justify-content: center;
-}
-
 .feed__image {
   margin: 0 auto;
   padding-top: #{baseline.increments(3)};
